@@ -1,3 +1,12 @@
+1999-01-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* TclInterp.m ([TclInterp -checkPath:subdirectory:file:]): 
+	Add subdirectory argument.
+
+	* T{cl,k}Interp.m ([T{cl,k}Interp -checkT{cl,k}Library]): Use above
+	and secondaryPath as base for t{cl,k}8.0 instead of as an explicit
+	path.
+
 1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* Makefile.am (CURRENT, AGE): Bump.  Clear revision.
